<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_white"
    tools:context="cn.soft_x.supplies.activity.ChangePwdActivity"
    >

    <EditText
        android:inputType="textPassword"
        android:id="@+id/change_pwd_ed_old"
        style="@style/ed_style_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpi_40"
        android:hint="@string/hint_old_pwd"
        />

    <EditText
        android:id="@+id/change_pwd_pwd_ed_1"
        style="@style/ed_style_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpi_40"
        android:layout_below="@id/change_pwd_ed_old"
        android:hint="@string/hint_input_pwd"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/change_pwd_pwd_ed_2"
        style="@style/ed_style_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpi_40"
        android:layout_below="@id/change_pwd_pwd_ed_1"
        android:hint="@string/hint_reinput_pwd"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/change_pwd_pwd_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpi_45"
        android:layout_below="@id/change_pwd_pwd_ed_2"
        android:layout_marginLeft="@dimen/dpi_45"
        android:layout_marginRight="@dimen/dpi_45"
        android:layout_marginTop="@dimen/dpi_80"
        android:background="@drawable/bg_yellow_btn"
        android:text="@string/sure"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        />
</RelativeLayout>
