<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_white"
    tools:context="cn.soft_x.supplies.activity.RegisterActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_app_white"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/register_ed_name"
                style="@style/ed_style_white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpi_40"
                android:hint="@string/hint_name"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/register_ed_phone"
                style="@style/ed_style_white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpi_40"
                android:hint="@string/hint_your_phone"
                android:inputType="phone"
                />

            <EditText
                android:id="@+id/register_ed_pwd1"
                style="@style/ed_style_white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpi_40"
                android:hint="@string/hint_your_pwd"
                android:inputType="textPassword"
                />

            <EditText
                android:id="@+id/register_ed_pwd2"
                style="@style/ed_style_white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpi_40"
                android:hint="@string/hint_reinput_your_pwd"
                android:inputType="textPassword"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpi_40"
                android:layout_marginLeft="@dimen/dpi_15"
                android:layout_marginRight="@dimen/dpi_15"
                android:layout_marginTop="@dimen/dpi_20"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <Spinner
                    android:id="@+id/register_sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dpi_2"
                    android:layout_weight="1"
                    android:entries="@array/city"
                    android:spinnerMode="dialog"
                    >

                </Spinner>

                <EditText
                    android:id="@+id/register_ed_city"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dpi_2"
                    android:layout_weight="1"
                    android:background="@drawable/bg_white_ed"
                    android:hint="请输入所在城市"
                    android:paddingLeft="@dimen/dpi_5"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/register_ed_address"
                style="@style/ed_style_white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpi_40"
                android:hint="@string/hint_address"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/register_ed_emergency"
                style="@style/ed_style_white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpi_40"
                android:hint="@string/hint_emergency"
                android:inputType="phone"
                />

            <cn.soft_x.supplies.view.WarpLinearLayout
                android:id="@+id/register_ll_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dpi_10"
                android:layout_marginLeft="@dimen/dpi_10"
                android:layout_marginTop="@dimen/dpi_10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:grivate="left"
                app:horizontal_Space="10dp"
                app:isFull="false"
                app:vertical_Space="10dp">

                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_kind"
                    android:textColor="@color/color_register_gray"/>

            </cn.soft_x.supplies.view.WarpLinearLayout>
            <EditText
                android:id="@+id/register_ed_id_card"
                style="@style/ed_style_white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpi_40"
                android:hint="@string/hint_id_card"
                />
            <TextView
                android:textSize="18sp"
                android:layout_marginTop="@dimen/dpi_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dpi_20"
                android:text="@string/upload_id_card"
                android:textColor="@color/color_register_gray"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal"

                >

                <ImageView
                    android:id="@+id/ac_auth_left_iv"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/bg_sfz_2"
                    />

                <ImageView
                    android:id="@+id/ac_auth_right_iv"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/bg_sfz_1"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal"

                >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/bg_sfz_2"
                    android:visibility="invisible"/>

                <ImageView
                    android:id="@+id/ac_auth_sign_iv"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/qianming"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dpi_20"
                android:text="@string/warning_info"
                android:textColor="@color/color_red"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dpi_15"
                android:layout_marginRight="@dimen/dpi_15"
                android:layout_marginTop="@dimen/dpi_20"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/register_ed_ver"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dpi_45"
                    android:layout_weight="3"
                    android:background="@drawable/bg_white_ed"
                    android:hint="@string/hint_ver"
                    android:inputType="number"
                    android:paddingLeft="@dimen/dpi_5"
                    />

                <Button
                    android:id="@+id/register_btn_get_ver"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dpi_45"
                    android:layout_marginLeft="@dimen/dpi_25"
                    android:layout_weight="2"
                    android:background="@drawable/bg_yellow_btn"
                    android:text="@string/get_ver"
                    android:textColor="@color/color_app_white"
                    android:textSize="18sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpi_30"
                android:layout_marginLeft="@dimen/dpi_20"
                android:layout_marginRight="@dimen/dpi_20"
                android:layout_marginTop="@dimen/dpi_10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <CheckBox
                    android:id="@+id/register_checkbox"
                    style="@style/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:text="@string/read"/>

                <TextView
                    android:id="@+id/register_tv_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement"
                    android:textColor="@color/color_app_theme"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/register_do_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpi_45"
                android:layout_marginBottom="@dimen/dpi_35"
                android:layout_marginLeft="@dimen/dpi_45"
                android:layout_marginRight="@dimen/dpi_45"
                android:layout_marginTop="@dimen/dpi_20"
                android:background="@drawable/bg_yellow_btn"
                android:text="@string/register"
                android:textColor="@color/color_app_white"
                android:textSize="22sp"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
