<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_white"
    tools:context="cn.soft_x.supplies.activity.ChangePhoneActivity"
    >

    <EditText
        android:layout_marginTop="@dimen/dpi_40"
        android:id="@+id/change_phone_ed"
        style="@style/ed_style_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpi_45"
        android:hint="@string/hint_phone"
        />

    <LinearLayout
        android:id="@+id/change_phone_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_phone_ed"
        android:layout_marginLeft="@dimen/dpi_15"
        android:layout_marginRight="@dimen/dpi_15"
        android:layout_marginTop="@dimen/dpi_20"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/change_phone_ed_ver"
            android:layout_width="0dp"
            android:layout_height="@dimen/dpi_45"
            android:layout_weight="3"
            android:background="@drawable/bg_white_ed"
            android:hint="@string/hint_ver"
            android:inputType="number"
            android:paddingLeft="@dimen/dpi_5"
            />

        <Button
            android:id="@+id/change_phone_btn_get_ver"
            android:layout_width="0dp"
            android:layout_height="@dimen/dpi_45"
            android:layout_marginLeft="@dimen/dpi_25"
            android:layout_weight="2"
            android:background="@drawable/bg_yellow_btn"
            android:text="@string/get_ver"
            android:textColor="@color/color_app_white"
            android:textSize="18sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/change_phone_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpi_45"
        android:layout_below="@id/change_phone_ll"
        android:layout_marginBottom="@dimen/dpi_35"
        android:layout_marginLeft="@dimen/dpi_45"
        android:layout_marginRight="@dimen/dpi_45"
        android:layout_marginTop="@dimen/dpi_80"
        android:background="@drawable/bg_yellow_btn"
        android:text="@string/sure"
        android:textColor="@color/color_app_white"
        android:textSize="22sp"
        />
</RelativeLayout>
