<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_white"
    tools:context="cn.soft_x.citymine.activity.SelectIdentityActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dpi_65"
        android:text="@string/select_identity"
        android:textSize="28sp"
        />

    <LinearLayout
        android:id="@+id/select_ll_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dpi_30"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:background="#8ee5ee"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dpi_15"
            android:text="@string/transfer"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_ll_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/dpi_30"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:background="#8ee5ee"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dpi_15"
            android:text="@string/supplier"
            />
    </LinearLayout>
</RelativeLayout>
